# aspect_based

./: README.md
crewai_demo/: README.md  pyproject.toml
crewai_demo/src/: crew.py  main.py
crewai_demo/src/config/: agents.yaml  tasks.yaml
