[project]
name = "open_source_project_discovery"
version = "0.1.0"
description = "open_source_project_discovery using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
    "jambo",
]

[project.scripts]
open_source_project_discovery = "open_source_project_discovery.main:run"
run_crew = "open_source_project_discovery.main:run"
train = "open_source_project_discovery.main:train"
replay = "open_source_project_discovery.main:replay"
test = "open_source_project_discovery.main:test"
run_with_trigger = "open_source_project_discovery.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
